<resources>
    <string name="app_name">Language Trainer</string>
    <string name="radioButtonDer">Der</string>
    <string name="radioButtonDie">Die</string>
    <string name="radioButtonDas">Das</string>
    <string name="buttonSubmitQuestion">Submit</string>
    <string name="buttonWelcomeStart">Start</string>
    <string name="resultsTitle">Results</string>
    <string name="buttonStartOver">Start over</string>
    <string name="welcomeDesc">This language trainer is designed to teach you the genders associated with a few random German nouns.</string>
</resources>
